# printrs

./: Cargo.toml  clippy.toml
.github/workflows/: main.yml
docs/: Printer.md
src/: lib.rs  printer.rs
