[package]
name = "printrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
env_logger = "0.9.0"
log = "0.4.17"
thiserror = "1.0.31"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
